--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     <footer>
         Copyright &copy;: ShivamPatwa
     </footer>
-  
+
+    <script src="script.js"></script>
 </body>
 </html>
