--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
            <h1 class="text-primary">Projects</h1>
            <div class="project-box">
             <div class="project-box-content">
-                <p>I made a full stack renting car website through which user can rent car for their use, Admin can also perform CRUD operations on cars. <a href="https://github.com/shivampatwa01/Drivo" class="link-col">Link</a></p>
+                <p>I made a full stack renting car website through which user can rent car for their use, Admin can also perform CRUD operations on cars. <a href="https://drivo-frontend.vercel.app/login" class="link-col">Link</a></p>
             </div>
            </div>
            <div class="project-box">
             <div class="project-box-content">
                 <p>I made a backend API that gives access to authenticated user to create a blog and perform CRUD operations on blogs. 
-                    Authentication is achieved using JWT Token.  <a href="" class="link-col">Link</a>
+                    Authentication is achieved using JWT Token.  <a href="https://newsapi-bij5.onrender.com/" class="link-col">Link</a>
                 </p>
             </div>
            </div>
