--- a/index.html
+++ b/index.html
@@ -99,20 +99,23 @@
                 <div class="skill-detail">JAVASCRIPT</div>
                 <div class="skill-detail">REACT.JS</div>
                 <div class="skill-detail">JAVA</div>
+                <div class="skill-detail">SQL</div>
             </div>
             <div class="skill-box">
                 <h1 class="skill-box-head">Development Skills</h1>
                 <div class="skill-detail">HTML</div>
                 <div class="skill-detail">CSS</div>
-                <div class="skill-detail">BOOTSTRAP</div>
                 <div class="skill-detail">TAILWIND</div>
+                <div class="skill-detail">BOOTSTRAP</div>
+                <div class="skill-detail">Node.js</div>
+                <div class="skill-detail">Express.js</div>
                 <div class="skill-detail">GIT</div>
             </div>
             <div class="skill-box">
                 <h1 class="skill-box-head">Soft Skills</h1>
-                <div class="skill-detail">Team Lead</div>
-                <div class="skill-detail">Event Management</div>
-                <div class="skill-detail">Time Management</div>
+                <div class="skill-detail">Led the hockey team by motivating players and fostering a collaborative environment for success.</div>
+                <div class="skill-detail">Collaborated with diverse hockey team members, enhancing communication, trust, and collective performance on-field.</div>
+                <div class="skill-detail"></div>
                
             </div>
         </div>
@@ -122,19 +125,18 @@
            <h1 class="text-primary">Projects</h1>
            <div class="project-box">
             <div class="project-box-content">
-                <p>I made a full stack renting car website through which user can rent car for their use, Admin can also perform CRUD operations on cars. <a href="https://drivo-frontend.vercel.app/login" class="link-col">Link</a></p>
+                <p>Designed and developed a full-stack web application that allows users to rent cars online, with admin features to manage listings, including adding, deleting, and updating car details. Implemented search and filter functionality for car availability, integrated Google Maps API for location viewing, Razorpay for secure payments, and JWT authentication for user security. Utilized Redux Toolkit for effective state management and real-time updates. <a href="https://drivo-frontend.vercel.app/login" class="link-col">Link</a></p>
             </div>
            </div>
            <div class="project-box">
             <div class="project-box-content">
-                <p>I made a backend API that gives access to authenticated user to create a blog and perform CRUD operations on blogs. 
-                    Authentication is achieved using JWT Token.  <a href="https://newsapi-bij5.onrender.com/" class="link-col">Link</a>
+                <p>Created a backend API for user registration and authentication, enabling secure access for users. Implemented CRUD operations for managing news entries, and integrated JWT tokens for secure authentication and session management, ensuring data security and reliable performance.  <a href="https://newsapi-bij5.onrender.com/" class="link-col">Link</a>
                 </p>
             </div>
            </div>
            <div class="project-box">
             <div class="project-box-content">
-                <p>I made a responsive e-commerse site containing home page and cart for items. Users can add multiple items to the cart and can also remove item from cart. <a href="https://shivampatwa01.github.io/sopify/" class="link-col">Link</a></p>
+                <p>Developed a responsive e-commerce website with a homepage and a functional shopping cart, optimizing product management. Designed cart functionality to handle multiple items efficiently and utilized Redux Toolkit for consistent data flow across components. <a href="https://shivampatwa01.github.io/sopify/" class="link-col">Link</a></p>
             </div>
            </div>
            <div class="project-box">
