--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             </div>
             <div class="skill-box">
                 <h1 class="skill-box-head">Soft Skills</h1>
-                <div class="skill-detail">Led the hockey team by motivating players and fostering a collaborative environment for success.</div>
-                <div class="skill-detail">Collaborated with diverse hockey team members, enhancing communication, trust, and collective performance on-field.</div>
-                <div class="skill-detail"></div>
+                <div class="skill-detail"><p>Led the hockey team by motivating players and fostering a collaborative environment for success.</p></div>
+                <div class="skill-detail"><p>Collaborated with diverse hockey team members, enhancing communication, trust, and collective performance on-field.</p></div>
+                <div class="skill-detail"><p>Developed game strategies through opponent analysis, ensuring informed decisions during competitive hockey matches.</p></div>
                
             </div>
         </div>
