--- a/index.html
+++ b/index.html
@@ -66,21 +66,29 @@
                 </P>
                 
                 <p class="main-p">
-                I am an innovative and enthusiastic person. I am focused
-                and learning new things excites me. My passion in life 
-                is to gain knowledge. Knowledge gives you power to be 
-                right and better than others.I don't fear failures or 
-                rejections, they are ways to enrich you and glorify your 
-                personality. Failures are experiences you gain from your 
-                mistakes.
+                I am an innovative and enthusiastic individual with a
+                strong desire for knowledge and continuous learning.
+                I believe that knowledge empowers us to excel, and 
+                I embrace failures and rejections as valuable
+                experiences that enrich my character. 
                 </p>
                 <p class="main-p">
-                I aspire to be an excellent Software Engineer and use my 
-                skills to make something productive and helpful for the 
-                nation. MY greatest strength is my positive attitude, 
-                even during the most hardest of times. My only weakness 
-                is to never give up no matter how hard things hit me, 
-                how much they destroy me I accept them as a challenge.
+                I possess a solid foundation in programming languages such as
+                C, C++, and JavaScript, along with proficiency in full-stack
+                development using the MERN stack (MongoDB, Express.js, React,
+                Node.js). My keen interest in solving Data Structures and
+                Algorithms (DSA) problems has significantly sharpened my
+                problem-solving abilities and logical thinking. Throughout
+                my academic journey, I have engaged in various projects that
+                allowed me to apply my technical skills to real-world scenarios,
+                developing innovative solutions and contributing to impactful projects.
+                </p>
+                <p class="main-p"></p>
+                My aspiration is to become an excellent Software Engineer,
+                utilizing my skills to create productive solutions that 
+                benefit society. My greatest strength lies in my positive
+                attitude, even in challenging times, while my determination
+                to never give up is both a strength and a weakness.
                 </p>
             </div>
            </div>
